src/test/deca/context/invalid/renduInter/21-wrong-type-sub-float-bool.deca
{
    float x = 4.0;
    boolean y = true;
    x = x-y;
}